fix/teak home width overflow

--- a/_sass/_designers-italia.scss
+++ b/_sass/_designers-italia.scss
@@ -1428,3 +1428,10 @@ body {
     padding-right: 4rem!important;
   }
 }
+
+/* more tweaks for small widths and 1024/400% */
+@media screen and (max-width:320px) {
+  .u-padding-r-all {
+    padding: .5em!important;
+  }
+}
